--- a/src/index.less
+++ b/src/index.less
@@ -22,11 +22,16 @@ a:hover {
   color: #535bf2;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
