Add header and simple empty state

--- a/src/components/StreakView/StreakView.less
+++ b/src/components/StreakView/StreakView.less
@@ -2,12 +2,35 @@
   height: 100%;
   width: 100%;
   display: grid;
-  grid-template-rows: auto min-content;
+  grid-template-rows: min-content auto;
   gap: 1rem;
+  overflow-y: auto;
 }
 
 .streak-grid {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.pointer {
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  animation: pulsate 4s infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
+  50% {
+    transform: scale(1.75);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0.8;
+  }
 }
