--- a/src/components/StreakView/User/StreakBlock/StreakBlock.module.less
+++ b/src/components/StreakView/User/StreakBlock/StreakBlock.module.less
@@ -16,10 +16,6 @@
     border-color: rgb(255, 200, 0);
     border-style: solid solid none;
 
-    &.inactive {
-      filter: grayscale(100%);
-    }
-
     .icon {
       border-style: none;
     }
@@ -53,5 +49,9 @@
       flex: 1 0 auto;
       text-align: left;
     }
+  }
+
+  .inactive {
+    filter: grayscale(100%);
   }
 }
