--- a/src/components/StreakView/StreakView.module.less
+++ b/src/components/StreakView/StreakView.module.less
@@ -6,10 +6,26 @@
   gap: 1rem;
   overflow-y: auto;
 
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  & {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   .streak-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+
+    & > * {
+      flex: 1;
+    }
   }
 
   .pointer {
