Add variable for grid sizing

--- a/src/components/StreakView/User/User.module.less
+++ b/src/components/StreakView/User/User.module.less
@@ -6,7 +6,7 @@
   gap: 10px;
 
   .avatar {
-    width: 200px;
+    width: calc(var(--streak-grid-item-max-width) / 2);
     border-radius: 16px;
   }
 }
