remove child items

--- a/src/components/AceternityUi/BackgroundGradientAnimation/BackgroundGradientAnimation.module.less
+++ b/src/components/AceternityUi/BackgroundGradientAnimation/BackgroundGradientAnimation.module.less
@@ -14,7 +14,7 @@
   bottom: 0;
   left: 0;
   overflow: hidden;
-  z-index: 2;
+  z-index: @background-z-index;
   background: linear-gradient(
     40deg,
     var(--gradient-background-start),
