--- a/src/components/AceternityUi/BackgroundBeams/BackgroundBeams.module.less
+++ b/src/components/AceternityUi/BackgroundBeams/BackgroundBeams.module.less
@@ -1,10 +1,9 @@
 .background-beams {
-  position: absolute;
-  height: 100%;
-  width: 100%;
+  position: fixed;
+  z-index: -1;
   top: 0;
-  right: 0;
   bottom: 0;
+  right: 0;
   left: 0;
   mask-size: 40px;
   mask-repeat: no-repeat;
