--- a/src/components/StreakView/User/User.module.less
+++ b/src/components/StreakView/User/User.module.less
@@ -3,7 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 1rem;
+  padding: 2rem;
+
+  // Configure the background image based on the current tier, if applicable
+  background-repeat: no-repeat;
+  background-size: auto calc(var(--streak-grid-item-max-width) / 8);
+  background-position: center top;
 
   .avatar {
     width: calc(var(--streak-grid-item-max-width) / 2);
