--- a/src/components/StreakView/User/StreakBlock/StreakBlock.module.less
+++ b/src/components/StreakView/User/StreakBlock/StreakBlock.module.less
@@ -1,6 +1,6 @@
 .streak-block {
   position: relative;
-  width: 200px;
+  width: calc(var(--streak-grid-item-max-width) / 2);
   color: rgb(255, 255, 255);
 
   .container {
