--- a/src/components/StreakView/User/User.module.less
+++ b/src/components/StreakView/User/User.module.less
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  padding: 2rem;
+  row-gap: 8px;
 
   // Configure the background image based on the current tier, if applicable
   background-repeat: no-repeat;
