Update the `.streak-grid` class to use CSS Grid layout instead of flexbox
* Set `display` to `grid` and `grid-template-columns` to `repeat(auto-fill, minmax(200px, 1fr))`
* Set `gap` to `1rem` to maintain spacing between grid items

--- a/src/components/StreakView/StreakView.module.less
+++ b/src/components/StreakView/StreakView.module.less
@@ -34,6 +34,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 1rem;
+    justify-items: center;
   }
 
   .pointer {
